@@ -300,6 +300,9 @@ Don't require CTRL+Button for blurring in any mode -- just use the button (defau
 .TR 5
 .B     --xinerama
 Enable/disable Xinerama support.  Has no effect unless you have an Xinerama compiled in.
+.TR 5
+.B     --screen-clip
+Enable/disable window clipping based on screen size.  WARNING: With this disabled, windows could become very large, making them unmanageable in certain window managers.
 .SH FORMAT SPECIFIERS
 .B %f
 image path/filename
